--- a/library_project/library_app/templates/library_app/myborrowlist.html
+++ b/library_project/library_app/templates/library_app/myborrowlist.html
@@ -63,70 +63,78 @@
     <!-- Historia wypożyczeń -->
 <div class="collapse" id="collapse_borrow_history">
 
-    <div class="page-title">
-        <h4>Historia wypożyczeń</h4>
-    </div>
+    {% if history_borrow_list.count is 0 %}
+            <div class="page-title">
+                <h4>Brak historii wypożyczeń</h4>
+            </div>
+    {% else %}
+
+        <div class="page-title">
+            <h4>Historia wypożyczeń</h4>
+        </div>
    
-    <table class="table table-bordered table-hover">
-                <thead class="thead-light">
-                    <tr>
-                        <th scope="col">Książka</th>
-                        <th scope="col">Nr egzemplarza</th>
-                        <th scope="col">Wypożyczone przez</th>
-                        <th scope="col">Odebrane przez</th>
-                        <th scope="col">Data wypożyczenia</th>
-                        <th scope="col">Data oddania</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for borrow in history_borrow_list %}
-                    <tr>
-                        <td>
-                            {% for author in borrow.book_copy_id.book.authors.all %}
-                                <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author.first_name}} {{author.last_name}}</a>
-                                <br>
-                            {% endfor %}
-                            <a href="{% url 'library_app:book_detail' pk=borrow.book_copy_id.book.pk %}">{{borrow.book_copy_id.book.title}}</a>
-                        </td>
-                        <td><a href="{% url 'library_app:bookcopy_detail' pk=borrow.book_copy_id.pk %}">{{borrow.book_copy_id.id}}</a></td>
-                        <td>{{borrow.borrow_librarian.get_full_name}}</td>
-                        <td>{{borrow.receive_librarian.get_full_name}}</td>
-                        <td>{{borrow.borrow_date}}</td>
-                        <td>{{borrow.receive_date}}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
 
-            <!-- pagination bar -->
-            <div class="pagination_bar">
-                {% if is_paginated %}
-                <div class="btn-group" role="group">
-                    
-                    {% if page_obj.has_previous %}
-                        <a class="btn btn-light disable" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
-                    {% else %}
-                        <a class="btn btn-light"><span>&laquo;</span></a>
-                    {% endif %}
+        <table class="table table-bordered table-hover">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Książka</th>
+                            <th scope="col">Nr egzemplarza</th>
+                            <th scope="col">Wypożyczone przez</th>
+                            <th scope="col">Odebrane przez</th>
+                            <th scope="col">Data wypożyczenia</th>
+                            <th scope="col">Data oddania</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for borrow in history_borrow_list %}
+                        <tr>
+                            <td>
+                                {% for author in borrow.book_copy_id.book.authors.all %}
+                                    <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author.first_name}} {{author.last_name}}</a>
+                                    <br>
+                                {% endfor %}
+                                <a href="{% url 'library_app:book_detail' pk=borrow.book_copy_id.book.pk %}">{{borrow.book_copy_id.book.title}}</a>
+                            </td>
+                            <td><a href="{% url 'library_app:bookcopy_detail' pk=borrow.book_copy_id.pk %}">{{borrow.book_copy_id.id}}</a></td>
+                            <td>{{borrow.borrow_librarian.get_full_name}}</td>
+                            <td>{{borrow.receive_librarian.get_full_name}}</td>
+                            <td>{{borrow.borrow_date}}</td>
+                            <td>{{borrow.receive_date}}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
 
-                    {% for i in paginator.page_range %}
-                        {% if page_obj.number == i %}
-                        <a  class="btn btn-dark active"><span>{{ i }} <span class="sr-only">(current)</span></span></a>
-                        {% else %}
-                        <a class="btn btn-light" href="?page={{ i }}">{{ i }}</a>
-                        {% endif %}
-                    {% endfor %}
+                <!-- pagination bar -->
+                <div class="pagination_bar">
+                    {% if is_paginated %}
+                    <div class="btn-group" role="group">
                         
-                    {% if page_obj.has_next %}
-                    <a class="btn btn-light" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
-                    {% else %}
-                    <a type="button" class="btn btn-light"><span>&raquo;</span></a>
+                        {% if page_obj.has_previous %}
+                            <a class="btn btn-light disable" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+                        {% else %}
+                            <a class="btn btn-light"><span>&laquo;</span></a>
+                        {% endif %}
+
+                        {% for i in paginator.page_range %}
+                            {% if page_obj.number == i %}
+                            <a  class="btn btn-dark active"><span>{{ i }} <span class="sr-only">(current)</span></span></a>
+                            {% else %}
+                            <a class="btn btn-light" href="?page={{ i }}">{{ i }}</a>
+                            {% endif %}
+                        {% endfor %}
+                            
+                        {% if page_obj.has_next %}
+                        <a class="btn btn-light" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
+                        {% else %}
+                        <a type="button" class="btn btn-light"><span>&raquo;</span></a>
+                        {% endif %}
+                    </div>
                     {% endif %}
                 </div>
-                {% endif %}
-            </div>
-        
-</div>
+            
+    </div>
+    {% endif %}
     
     
    
