--- a/library_project/static/css/style.css
+++ b/library_project/static/css/style.css
@@ -80,3 +80,21 @@ h1{
     margin-top: 50px;
     margin-bottom: 50px;
 }
+
+
+
+.search-bar{
+    padding-top: 40px; 
+    padding-bottom: 20px; 
+    margin: 0 auto;
+    width: 50%;
+}
+.search-button{
+    width: 100px;
+}
+
+.search-select{
+    width: 200px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
