--- a/library_project/static/css/style.css
+++ b/library_project/static/css/style.css
@@ -98,3 +98,13 @@ h1{
     margin-right: 10px;
     margin-left: 10px;
 }
+
+#collapse1{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#collapse2{
+    margin-top: 50px;
+    margin-bottom: 200px;
+}
