--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap4 -->
     <link rel="stylesheet" href="{% static '/bootstrap/css/bootstrap.min.css' %}">
 
+    <script src="{% static 'js/custom_functions.js' %}"></script>
+
     <!-- Wlasny css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
