--- a/library_project/library_app/templates/library_app/author_detail.html
+++ b/library_project/library_app/templates/library_app/author_detail.html
@@ -1,43 +1,100 @@
 {% extends "base.html" %}
+{% load custom_tags %}
 
 {% block body_block %}
-<div class="container">
-    <div class="page-title author_detail jumbotron">
-        <h2>Szczegóły autora</h2>
-        <ul>
-            {% if author.image_url %} <!-- Jesli link jest uzupełniony -->
-                <img src="{{author.image_url}}" width="300" height="300">
-            {% endif %}
-            <li class="personal_data"><b>Imie i nazwisko: </b> {{author.first_name}} {{author.last_name}} </li>
-            
-            {% if author.years_of_life %}
-                <li class="years_of_life"><b>Lata życia: </b> {{author.years_of_life}} </li>
-            {% endif %}
-
-            {% if author.birth_place %}
-                <li class="birth_place"><b>Miejsce urodzenia: </b> {{author.birth_place}} </li>
-            {% endif %}
-
-            <li class="country"><b>Kraj pochodzenia: </b> {{author.country}} </li>
-
-            {% if author.biography %}
-                <li class="biography"><b>Biografia: </b> <br> {{author.biography}} </li>
-            {% endif %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div id="navbarNavDropdown" class="navbar-collapse collapse">
+        <ul class="navbar-nav mr-auto">
+            <a class="btn" data-toggle="collapse" href="#collapse1" role="button" aria-expanded="false"
+                aria-controls="collapse" onclick="scrollToIdElem('collapse1')">
+                Pokaż szczegóły
+            </a>
+            <a class="btn" data-toggle="collapse" href="#collapse2" role="button" aria-expanded="false"
+                aria-controls="collapse" onclick="scrollToIdElem('collapse2')">
+                Pokaż książki autora
+            </a>
         </ul>
+    </div>
+</nav>
 
-        <div class="detail_back_link button">
-            <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
+<div class="container">
+    <div class="page-title author_detail">
+        <div class="collapse show" id="collapse1">
+            <h3>Szczegóły autora</h3>
+            <ul>
+                {% if author.image_url %} <!-- Jesli link jest uzupełniony -->
+                    <img src="{{author.image_url}}" width="300" height="300">
+                {% endif %}
+                <li class="personal_data"><b>Imie i nazwisko: </b> {{author.first_name}} {{author.last_name}} </li>
+                
+                {% if author.years_of_life %}
+                    <li class="years_of_life"><b>Lata życia: </b> {{author.years_of_life}} </li>
+                {% endif %}
+
+                {% if author.birth_place %}
+                    <li class="birth_place"><b>Miejsce urodzenia: </b> {{author.birth_place}} </li>
+                {% endif %}
+
+                <li class="country"><b>Kraj pochodzenia: </b> {{author.country}} </li>
+
+                {% if author.biography %}
+                    <li class="biography"><b>Biografia: </b> <br> {{author.biography}} </li>
+                {% endif %}
+            </ul>
+
+            <div class="detail_back_link button">
+                <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
+            </div>
+
+            {% if user.is_authenticated and user.is_superuser %}
+                <div class="update_author_link button">
+                    <a href="{% url 'library_app:author_update' pk=author.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj autora"></a>
+                </div>
+
+                <div class="delete_author_link button">
+                    <a href="{% url 'library_app:author_delete' pk=author.pk %}"><input type="submit" class="btn btn-danger" value="Usuń autora"></a>
+                </div>
+            {% endif %}
         </div>
 
-        {% if user.is_authenticated and user.is_superuser %}
-            <div class="update_author_link button">
-                <a href="{% url 'library_app:author_update' pk=author.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj autora"></a>
-            </div>
+    <!-- Książki autora -->
+    <div class="collapse show" id="collapse2">
+        <h3>Książki autora</h3>
+        <table class="table table-bordered table-hover">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Tytuł</th>
+                    <th scope="col">Autor</th>
+                    <th scope="col">Kategoria</th>
+                    <th scope="col">Wydawnictwo</th>
+                    <th scope="col">Egzemplarzy</th>
+                    <th scope="col">Wolnych egzemplarzy</th>
+                </tr>
+            </thead>
+            <tbody>
 
-            <div class="delete_author_link button">
-                <a href="{% url 'library_app:author_delete' pk=author.pk %}"><input type="submit" class="btn btn-danger" value="Usuń autora"></a>
-            </div>
-        {% endif %}
+            {% for book in author_books %}
+                    <tr>
+                        <td><a href="{% url 'library_app:book_detail' pk=book.pk %}">{{book.title}}</a></td>
+                        
+                        <td>
+                            {% for author in book.authors.all %}
+                                <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author}}</a>
+                            {% endfor %}
+                        </td>
+
+                        <td><a href="{% url 'library_app:category_detail' pk=book.category.pk %}">{{book.category.category_name}}</a></td>
+                        <td><a href="{% url 'library_app:publishinghouse_detail' pk=book.publishing_house.pk %}">{{book.publishing_house}}</a></td>
+                        <td>{{book.bookcopies.count}}</td>
+
+                        {% free_bookcopies_counter_tag book.bookcopies as free_bookcopies %}
+                        <td>{{free_bookcopies}}</td>
+                    </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
+
+</div>
 </div>
 {% endblock %}
