--- a/library_project/library_app/templates/library_app/borrow_confirm_delete.html
+++ b/library_project/library_app/templates/library_app/borrow_confirm_delete.html
@@ -6,9 +6,15 @@
     <br>
     <h4>Szczegóły wypożyczenia</h4>
     <ul>
-        <li class="user"><b>Wypożyczający: </b> {{borrow.user.get_full_name}} </li>
-        <li class="book"><b>Książka: </b> {{borrow.book_copy_id.book}} </li>
+        <li class="book"><b>Książka: </b>  
+            {% for author in borrow.book_copy_id.book.authors.all %}
+                {{author.first_name}} {{author.last_name}},
+            {% endfor %}   
+            {{borrow.book_copy_id.book}}
+        </li>
         <li class="book_copy_nr"><b>Nr egzemplarza: </b> {{borrow.book_copy_id.id}} </li>
+        <li class="user"><b>Wypożyczone dla: </b> {{borrow.user.get_full_name}} </li>
+        <li class="user"><b>Wypożyczone przez: </b> {{borrow.borrow_librarian.get_full_name}} </li>
         <li class="borrow_date"><b>Data wypozyczenia: </b> {{borrow.borrow_date}} </li>
         <li class="receive_date"><b>Data oddania: </b> {{borrow.receive_date}} </li>
     </ul>
