--- a/library_project/library_app/templates/library_app/publishinghouse_detail.html
+++ b/library_project/library_app/templates/library_app/publishinghouse_detail.html
@@ -1,30 +1,90 @@
 {% extends "base.html" %}
 
 {% block body_block %}
-<div class="container">
-    <div class="page-title publishing_house_detail jumbotron">
-        <h2>Szczegóły wydawnictwa</h2>
-        <ul>
-            <li class="name"><b>Nazwa: </b> {{publishinghouse.name}} </li>
-            <li class="city"><b>Miasto: </b> {{publishinghouse.city}} </li>
-            <li class="address"><b>Adres: </b> {{publishinghouse.street}} {{publishinghouse.house_number}} </li>
-            <li class="postal_code"><b>Kod pocztowy: </b> {{publishinghouse.postal_code}} </li>
+{% load custom_tags %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div id="navbarNavDropdown" class="navbar-collapse collapse">
+        <ul class="navbar-nav mr-auto">
+            <a class="btn" data-toggle="collapse" href="#collapse1" role="button" aria-expanded="false" aria-controls="collapse"
+                onclick="scrollToIdElem('collapse1')">
+                Pokaż szczegóły
+            </a>
+            <a class="btn" data-toggle="collapse" href="#collapse2" role="button" aria-expanded="false" aria-controls="collapse"
+                onclick="scrollToIdElem('collapse2')">
+                Pokaż książki wydawnictwa
+            </a>
         </ul>
-        
-        
-        <div class="book_list_back_link button">
-            <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
+    </div>
+</nav>
+
+<div class="container">
+    <div class="page-title publishing_house_detail">
+        <div class="collapse show" id="collapse1">
+            <h2>Szczegóły wydawnictwa</h2>
+            <ul>
+                <li class="name"><b>Nazwa: </b> {{publishinghouse.name}} </li>
+                <li class="city"><b>Miasto: </b> {{publishinghouse.city}} </li>
+                <li class="address"><b>Adres: </b> {{publishinghouse.street}} {{publishinghouse.house_number}} </li>
+                <li class="postal_code"><b>Kod pocztowy: </b> {{publishinghouse.postal_code}} </li>
+                <li class="PH_books_count"><b>Liczba książek wydawnictwa: </b> {{publishing_house_books.count}} </li>
+            </ul>
+            
+            
+            <div class="book_list_back_link button">
+                <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
+            </div>
+
+            {% if user.is_authenticated and user.is_superuser %}
+                <div class="update_book_link button">
+                    <a href="{% url 'library_app:publishinghouse_update' pk=publishinghouse.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj wydawnictwo"></a>
+                </div>
+
+                <div class="delete_book_link button">
+                    <a href="{% url 'library_app:publishinghouse_delete' pk=publishinghouse.pk %}"><input type="submit" class="btn btn-danger" value="Usuń wydawnictwo"></a>
+                </div>
+            {% endif %}
         </div>
 
-        {% if user.is_authenticated and user.is_superuser %}
-            <div class="update_book_link button">
-                <a href="{% url 'library_app:publishinghouse_update' pk=publishinghouse.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj wydawnictwo"></a>
-            </div>
+        
+        <div class="collapse show" id="collapse2">
+            <h3>Książki z tego wydawnictwa</h3>
+            <table class="table table-bordered table-hover">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col">Tytuł</th>
+                        <th scope="col">Autor</th>
+                        <th scope="col">Kategoria</th>
+                        <th scope="col">Wydawnictwo</th>
+                        <th scope="col">Egzemplarzy</th>
+                        <th scope="col">Wolnych egzemplarzy</th>
+                    </tr>
+                </thead>
+                <tbody>
+        
+                    {% for book in publishing_house_books %}
+                    <tr>
+                        <td><a href="{% url 'library_app:book_detail' pk=book.pk %}">{{book.title}}</a></td>
+        
+                        <td>
+                            {% for author in book.authors.all %}
+                            <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author}}</a>
+                            {% endfor %}
+                        </td>
+        
+                        <td><a href="{% url 'library_app:category_detail' pk=book.category.pk %}">{{book.category.category_name}}</a></td>
+                        <td><a href="{% url 'library_app:publishinghouse_detail' pk=book.publishing_house.pk %}">{{book.publishing_house}}</a></td>
+                        <td>{{book.bookcopies.count}}</td>
+        
+                        {% free_bookcopies_counter_tag book.bookcopies as free_bookcopies %}
+                        <td>{{free_bookcopies}}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
-            <div class="delete_book_link button">
-                <a href="{% url 'library_app:publishinghouse_delete' pk=publishinghouse.pk %}"><input type="submit" class="btn btn-danger" value="Usuń wydawnictwo"></a>
-            </div>
-        {% endif %}
+
     </div>
 </div>
 {% endblock %}
