add userProfileInfo model with more informations about user

--- a/library_project/accounts/templates/accounts/signup.html
+++ b/library_project/accounts/templates/accounts/signup.html
@@ -6,7 +6,12 @@
     <h1>Zarejestruj się</h1>
     <form method="POST">
         {% csrf_token %}
-        {% bootstrap_form form %}
+        {% bootstrap_form user_form %}
+
+
+        <h3 class="page-title">Informacje dodatkowe</h3>
+
+        {% bootstrap_form profile_form %}
         <input type="submit" class="btn btn-primary sign-up-btn" value="Zarejestruj się">
     </form>
 </div>
