register template visual fix

--- a/library_project/accounts/templates/accounts/signup.html
+++ b/library_project/accounts/templates/accounts/signup.html
@@ -12,7 +12,7 @@
         <h3 class="page-title">Informacje dodatkowe</h3>
 
         {% bootstrap_form profile_form %}
-        <input type="submit" class="btn btn-primary sign-up-btn" value="Zarejestruj się">
+        <input type="submit" style="margin-bottom: 80px;" class="btn btn-primary sign-up-btn" value="Zarejestruj się">
     </form>
 </div>
 
