--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static '/bootstrap/css/bootstrap.min.css' %}">
 
     <script src="{% static 'js/custom_functions.js' %}"></script>
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 
     <!-- Wlasny css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -68,6 +69,8 @@
                             <a class="dropdown-item" href="{% url 'library_app:author_create' %}">Dodaj autora</a>
                             <a class="dropdown-item" href="{% url 'library_app:publishinghouse_create' %}">Dodaj wydawnictwo</a>
                             <a class="dropdown-item" href="{% url 'library_app:category_create' %}">Dodaj kategorię</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'library_app:users_list' %}">Zarządzaj użytkownikami @TODO</a>
                         </div>
                     </li>
 
@@ -101,7 +104,7 @@
 
          {% block body_block %}{% endblock %}
 
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
