--- a/library_project/library_app/templates/library_app/borrow_confirm_delete.html
+++ b/library_project/library_app/templates/library_app/borrow_confirm_delete.html
@@ -2,27 +2,29 @@
 
 {% block body_block %}
 <div class="container">
-    <h2>Usunąć wypożyczenie?</h2>
-    <br>
-    <h4>Szczegóły wypożyczenia</h4>
-    <ul>
-        <li class="book"><b>Książka: </b>  
-            {% for author in borrow.book_copy_id.book.authors.all %}
-                {{author.first_name}} {{author.last_name}},
-            {% endfor %}   
-            {{borrow.book_copy_id.book}}
-        </li>
-        <li class="book_copy_nr"><b>Nr egzemplarza: </b> {{borrow.book_copy_id.id}} </li>
-        <li class="user"><b>Wypożyczone dla: </b> {{borrow.user.get_full_name}} </li>
-        <li class="user"><b>Wypożyczone przez: </b> {{borrow.borrow_librarian.get_full_name}} </li>
-        <li class="borrow_date"><b>Data wypozyczenia: </b> {{borrow.borrow_date}} </li>
-        <li class="receive_date"><b>Data oddania: </b> {{borrow.receive_date}} </li>
-    </ul>
-    <br>
-    <form method="POST">
-        {% csrf_token %}
-        <a class="btn btn-primary" href="{% url 'library_app:borrow_list' %}">Powrót</a>
-        <input type="submit" class="btn btn-danger" value="Usuń">
-    </form>
+    <div class="jumbotron">
+        <h2>Usunąć wypożyczenie?</h2>
+        <br>
+        <h4>Szczegóły wypożyczenia</h4>
+        <ul>
+            <li class="book"><b>Książka: </b>  
+                {% for author in borrow.book_copy_id.book.authors.all %}
+                    {{author.first_name}} {{author.last_name}},
+                {% endfor %}   
+                {{borrow.book_copy_id.book}}
+            </li>
+            <li class="book_copy_nr"><b>Nr egzemplarza: </b> {{borrow.book_copy_id.id}} </li>
+            <li class="user"><b>Wypożyczone dla: </b> {{borrow.user.get_full_name}} </li>
+            <li class="user"><b>Wypożyczone przez: </b> {{borrow.borrow_librarian.get_full_name}} </li>
+            <li class="borrow_date"><b>Data wypozyczenia: </b> {{borrow.borrow_date}} </li>
+            <li class="receive_date"><b>Data oddania: </b> {{borrow.receive_date}} </li>
+        </ul>
+        <br>
+        <form method="POST">
+            {% csrf_token %}
+            <a class="btn btn-primary" href="{% url 'library_app:borrow_list' %}">Powrót</a>
+            <input type="submit" class="btn btn-danger" value="Usuń">
+        </form>
+    </div>
 </div>
 {% endblock %}
