--- a/library_project/library_app/templates/library_app/publishinghouse_form.html
+++ b/library_project/library_app/templates/library_app/publishinghouse_form.html
@@ -3,7 +3,7 @@
 
 {% block body_block %}
 <div class="container">
-    <h1>Wydawnictwo</h1>
+    <h1>Dodaj nowe wydawnictwo</h1>
     <form method="POST" action="{% url 'library_app:publishinghouse_create' %}" class="publishing-house-form">
         {% csrf_token %}
         {% bootstrap_form form %}
