--- a/library_project/library_app/templates/library_app/users_list.html
+++ b/library_project/library_app/templates/library_app/users_list.html
@@ -6,7 +6,7 @@
 {% block body_block %}
 <div class="container">
     <div class="page-title">
-        <h2>Zarządaj użytkownikami</h2>
+        <h2>Zarządzaj użytkownikami</h2>
     </div>
 
 
@@ -46,13 +46,13 @@
                 {% get_borrow_by_user_count user_profile_obj.user as user_obj_borrow_count %}
                     <tr>
                         <td>
-                            <a><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
+                            <a href="{% url 'library_app:user_profile' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
                             {% if user_profile_obj.user.is_active == True and user_obj_borrow_count == 0 and user_profile_obj.user.is_superuser == False %}
-                                <a><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń konto" width="20" height="20"></a> 
+                                <a ><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń konto" width="20" height="20"></a> 
                             {% endif %}
 
                             {% if user_profile_obj.user.is_active == True and user_profile_obj.user.is_superuser == False %}
-                                <a><img src="{% static 'website_icons/grand_to_librarian_ico.png' %}" alt="Nadaj uprawnienia bibliotekrza" width="20" height="20"></a>
+                                <a href="{% url 'library_app:user_grant' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/grand_to_librarian_ico.png' %}" alt="Nadaj uprawnienia bibliotekrza" width="20" height="20"></a>
                             {% endif %}
 
                             {% if user.is_superuser and user_profile_obj.user.is_active == False %}
