--- a/library_project/library_app/templates/library_app/users_list.html
+++ b/library_project/library_app/templates/library_app/users_list.html
@@ -47,16 +47,24 @@
                     <tr>
                         <td>
                             <a href="{% url 'library_app:user_profile' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
-                            {% if user_profile_obj.user.is_active == True and user_obj_borrow_count == 0 and user_profile_obj.user.is_superuser == False %}
-                                <a ><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń konto" width="20" height="20"></a> 
-                            {% endif %}
-
-                            {% if user_profile_obj.user.is_active == True and user_profile_obj.user.is_superuser == False %}
-                                <a href="{% url 'library_app:user_grant' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/grand_to_librarian_ico.png' %}" alt="Nadaj uprawnienia bibliotekrza" width="20" height="20"></a>
-                            {% endif %}
-
+                            <!-- Aktywowanie usera -->
                             {% if user.is_superuser and user_profile_obj.user.is_active == False %}
-                                <a><img src="{% static 'website_icons/activate_user_ico.png' %}" alt="Aktywuj konto" width="20" height="20"></a>
+                                <a href="{% url 'library_app:user_activate' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/activate_user_ico.png' %}" alt="Aktywuj konto" width="20" height="20"></a>
+                            {% endif %}
+                            
+                            <!-- Dezaktywowanie usera -->
+                            {% if user_profile_obj.user.is_active == True and user_obj_borrow_count == 0 and user_profile_obj.user.is_superuser == False %}
+                                <a href="{% url 'library_app:user_deactivate' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/deactivate_user_ico.png' %}" alt="Usuń konto" width="20" height="20"></a> 
+                            {% endif %}
+
+                            <!-- Nadanie praw bibliotekarza -->
+                            {% if user_profile_obj.user.is_active == True and user_profile_obj.user.is_superuser == False %}
+                                <a href="{% url 'library_app:user_grant' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/grant_to_librarian_ico.png' %}" alt="Nadaj uprawnienia bibliotekrza" width="20" height="20"></a>
+                            {% endif %}
+                            
+                            <!-- Odebranie praw usera, zalogowany bibliotekarz nie moze sobie odebrac prac -->
+                            {% if user.id is not user_profile_obj.user.id and user_profile_obj.user.is_active == True and user_profile_obj.user.is_superuser == True %}
+                                <a href="{% url 'library_app:get_rights' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/get_librarian_rights_ico.png' %}" alt="Odebranie uprawnienia bibliotekrza" width="20" height="20"></a>
                             {% endif %}
                         </td>
 
@@ -119,9 +127,10 @@
     <div class="table-legend">
         <p><b>Legenda:</b></p>
         <p><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20">Szczegóły książki</p>
-        <p><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń wypozyczenie" width="20" height="20">Dezaktywwuj konto (gdy dany użytkownik nie ma wypożyczeń i jego konto nie ma statusu bibliotekarza)</p>
         <p><img src="{% static 'website_icons/activate_user_ico.png' %}" alt="Aktywuj użytkownika" width="20" height="20">Aktywuj konto</p>
-        <p><img src="{% static 'website_icons/grand_to_librarian_ico.png' %}" alt="Nadaj uprawnienia bibliotekrza" width="20" height="20">Nadaj uprawnienia bibliotekrza</p>
+        <p><img src="{% static 'website_icons/deactivate_user_ico.png' %}" alt="Usuń wypozyczenie" width="20" height="20">Dezaktywwuj konto (gdy dany użytkownik nie ma wypożyczeń i jego konto nie ma statusu bibliotekarza)</p>
+        <p><img src="{% static 'website_icons/grant_to_librarian_ico.png' %}" alt="Nadaj uprawnienia bibliotekrza" width="20" height="20">Nadaj uprawnienia bibliotekrza</p>
+        <p><img src="{% static 'website_icons/get_librarian_rights_ico.png' %}" alt="Odbierz uprawnienia bibliotekrza" width="20" height="20">Odbierz uprawnienia bibliotekrza</p>
     </div>
 
 </div>
