--- a/library_project/library_app/templates/library_app/author_detail.html
+++ b/library_project/library_app/templates/library_app/author_detail.html
@@ -43,7 +43,7 @@
             </ul>
 
             <div class="detail_back_link button">
-                <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
+                <a href="javascript:history.back()"><input type="button" class="btn btn-dark" value="Powrót"></a>
             </div>
 
             {% if user.is_authenticated and user.is_superuser %}
