--- a/library_project/library_app/templates/library_app/user_detail.html
+++ b/library_project/library_app/templates/library_app/user_detail.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block body_block %}
+{% get_borrow_by_user user_profile.user as user_obj_borrow %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div id="navbarNavDropdown" class="navbar-collapse collapse">
@@ -31,19 +32,20 @@
 
         <ul>
             <li><b>Imię i nazwisko: </b>{{user_profile.user.get_full_name}}</li>
-            <li><b>Email: </b> <a href="mailto:jan.kowalski@gmail.pl">{{user_profile.user.email}}</a></li>
+            <li><b>Email: </b>{{user_profile.user.email}}</a></li>
             <li><b>Telefon: </b>{{user_profile.phone}}</li>
             <li><b>PESEL: </b>{{user_profile.pesel}} </li>
             <li><b>Adres: </b>{{user_profile.street}} {{user_profile.house_number}} {{user_profile.post_code}} {{user_profile.city}} </li>
             <br>
 
             <li><b>Typ konta: </b>
-                {% if user.is_superuser %}
+                {% if user_profile.user.is_superuser %}
                     Bibliotekarz
                 {% else %}
                     Czytelnik
                 {% endif %}
             </li>
+            <li><b>Liczba wypożyczeń: </b>{{user_obj_borrow.count}}</li>
             <li><b>Dołączył dnia: </b> {{user_profile.user.date_joined}}</li>
             <li><b>Ostatnie logowanie dnia: </b> {{user_profile.user.last_login}} </li>
             <li><b>Czy konto aktywne: </b>
@@ -58,7 +60,7 @@
     </div>
 
     <div class="collapse" id="collapse-next2">
-        {% get_borrow_by_user user_profile.user as user_obj_borrow %}
+
         {% if user_obj_borrow.count == 0 %}
             <div class="page-title">
                 <h5>Brak wypożyczeń </h5>
@@ -112,23 +114,34 @@
         <div class="page-title">
             <h5>Opcje</h5>
          </div>   
-        {% if user_profile.user.is_active == True and user_profile.user.is_superuser == False %}
-            <div class="button">
-                <a href="{% url 'library_app:user_grant' pk=user_profile.pk %}"><input type="submit" class="btn btn-primary" value="Nadaj uprawnienia bibliotekarza"></a>
-            </div>
-        {% endif %}
 
-        {% if user_profile.user.is_active == True and user_obj_borrow.count == 0 and user_profile.user.is_superuser == False %}
-            <div class="button">
-                <a><input type="submit" class="btn btn-danger button" value="Dezaktywuj konto"></a>
-            </div>
-        {% endif %}
-
+        <!-- Aktywowanie usera -->
         {% if user.is_superuser and user_profile.user.is_active == False %}
             <div class="button">
-                <a><input type="submit" class="btn btn-success button" value="Aktywuj konto"></a>
+                <a href="{% url 'library_app:user_activate' pk=user_profile.pk %}"><input type="submit" class="btn btn-success button" value="Aktywuj konto"></a>
             </div>
-        {% endif %}   
+        {% endif %}
+                            
+        <!-- Dezaktywowanie usera -->
+        {% if user_profile.user.is_active == True and user_obj_borrow.count == 0 and user_profile.user.is_superuser == False %}
+            <div class="button">
+                <a href="{% url 'library_app:user_deactivate' pk=user_profile.pk %}"><input type="submit" class="btn btn-danger button" value="Dezaktywuj konto"></a> 
+            </div>
+        {% endif %}
+
+        <!-- Nadanie praw bibliotekarza -->
+        {% if user_profile.user.is_active == True and user_profile.user.is_superuser == False %}
+            <div class="button">
+                <a href="{% url 'library_app:user_grant' pk=user_profile.pk %}"><input type="submit" class="btn btn-success" value="Nadaj uprawnienia bibliotekarza"></a>
+            </div>
+        {% endif %}
+                            
+         <!-- Odebranie praw usera, zalogowany bibliotekarz nie moze sobie odebrac praw -->
+        {% if user.id is not user_profile.user.id and user_profile.user.is_active == True and user_profile.user.is_superuser == True %}
+            <div class="button">
+                <a href="{% url 'library_app:get_rights' pk=user_profile.pk %}"><input type="submit" class="btn btn-danger" value="Odbierz uprawnienia bibliotekarza"></a>
+            </div>
+        {% endif %}
         
         <div class="borrow_list_back_link button">
             <a href="javascript:history.back()"><input type="button" class="btn btn-dark" value="Powrót"></a>
