--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -72,6 +72,8 @@
                             <a class="dropdown-item" href="{% url 'library_app:category_create' %}">Dodaj kategorię</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'library_app:users_list' %}">Zarządzaj użytkownikami</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'admin:index' %}">Panel administratora</a>
                         </div>
                     </li>
 
