--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -54,7 +54,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'library_app:bookcopy_list' %}">Lista egzemplarzy</a>
                             <a class="dropdown-item" href="{% url 'library_app:borrow_list' %}">Lista wypożyczeń</a>
-                            <a class="dropdown-item" href="{% url 'library_app:borrow_list' %}">Historia wypożyczeń @TODO</a>
+                            <a class="dropdown-item" href="{% url 'library_app:borrow_history_list' %}">Historia wypożyczeń</a>
                         </div>
                     </li>
 
